# bazel_nuitka_test

./: .gitignore  README.md  WORKSPACE.bazel
tools/nuitka/: BUILD.bazel  nuitka_wrapper.py
